# Agent-Cyplex

./: .env.example  .gitattributes  .gitignore  Cargo.toml  Description.md  LICENSE  Makefile  README.md  RELEASE.md  Security.md  go.mod  package-lock.json  package.json  pyproject.toml  tsconfig.json
Formula/: README.md  agent-v0.rb
Web/: DESIGN.md  code.html  index.html  server.js
Web/css/: styles.css
Web/js/: app.js  chat.js  editor.js  filesystem.js  filetree.js  git.js  localfs.js  menus.js  panels.js  search.js  settings.js  shortcuts.js  tabs.js  terminal.js  theme.js  utils.js
config/: config.example.yaml  permissions.schema.yaml  scope.example.yaml
go/net-probe/: banner_grab.go  dns_resolver.go  go.mod  main.go  port_scanner.go
go/ssh-tunnel/: config.go  health.go  key_loader.go  main.go  tunnel.go
python/forensics-service/: entropy_analyzer.py  main.py  pcap_analyzer.py  pefile_analyzer.py  requirements.txt  volatility_bridge.py  yara_scanner.py
python/osint-utils/: breach_lookup.py  cert_transparency.py  graph_builder.py  requirements.txt
rust/cyplex-audit/: Cargo.toml
rust/cyplex-crypto/: Cargo.toml
rust/cyplex-crypto/src/: ed25519.rs  hmac.rs  lib.rs  rng.rs  zeroize.rs
rust/cyplex-ipc/: Cargo.toml
rust/cyplex-keystore/: Cargo.toml
rust/cyplex-keystore/src/: crypto.rs  error.rs  keystore.rs  lib.rs  master_key.rs
rust/cyplex-permissions/: Cargo.toml
scripts/: build-go.sh  build-rust.sh  dev-setup.sh  install-agent-v0.sh  install-cyplex.sh  install.sh  setup-ssh-keys.sh
src/agents/: base_agent.ts  (+9 more)
tools/: commands.ts  main.tsx
(+160 files in other folders)
