[workspace]
resolver = "2"
members = [
    "rust/cyplex-sandbox",
    "rust/cyplex-keystore",
    "rust/cyplex-audit",
    "rust/cyplex-ipc",
    "rust/cyplex-permissions",
    "rust/cyplex-crypto",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/centeler34/Agent-cyplex"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
