[package]
name = "cyplex-keystore"
version = "0.1.0"
edition = "2021"
description = "Encrypted secret storage engine for Agent Cyplex"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
base64 = "0.22"
